--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Conversion_host_considerations.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Conversion_host_considerations.adoc
@@ -30,7 +30,7 @@ You must select the transformation option, VDDK or SSH, that is appropriate for 
 ** Recommended because it is approximately twice as fast as SSH
 ** Compiled with `nbdkit` to provide direct connectivity to the virtual machine disks
 ** Requires VDDK package download
-** Requires a location for conversion host configuration
+** Requires the location of the VDDK library for conversion host configuration
 
 * *SSH*
 
