--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
@@ -7,7 +7,7 @@ To prepare the Red Hat OpenStack Platform environment for migration:
 
 . Set the BIOS settings of the physical hosts for optimal performance (rather than power-saving), according to the vendor's recommendations, and disable the C1E halt state, if applicable.
 
-. Install link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/director_installation_and_usage/[Red Hat OpenStack Platform] 10 or later.
+. Install link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/director_installation_and_usage/[Red Hat OpenStack Platform] 13 or later.
 
 . Create link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/networking_guide/#create_a_network[provider networks] for the target instances to ensure that the IP addresses of the source virtual machines are preserved.
 
@@ -28,11 +28,11 @@ Outbound traffic is enabled by default. If you have changed this setting, enable
 
 . Create flavors suitable for the virtual machines that you are migrating. If you do not create custom flavors, CloudForms will try to map the source virtual machine to an existing flavor.
 
-. Install link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/46/html-single/installing_red_hat_cloudforms_on_red_hat_openstack_platform/[Red Hat CloudForms] 4.6 or later.
+. Install link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/installing_red_hat_cloudforms_on_red_hat_openstack_platform/[Red Hat CloudForms] 4.7 or later.
 
-. Add the link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#vmware_vcenter_providers[VMware] and  link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#adding_an_openstack_infrastructure_provider[OpenStack Platform] environments to CloudForms.
+. Add the link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#vmware_vcenter_providers[VMware] and  link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#adding_an_openstack_infrastructure_provider[OpenStack Platform] environments to CloudForms.
 
-. Create and configure the xref:Conversion_hosts[conversion hosts].
+. Configure the xref:Conversion_hosts[conversion hosts].
 +
 [NOTE]
 ====
