--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Common_issues_and_mistakes.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Common_issues_and_mistakes.adoc
@@ -8,7 +8,7 @@
 
 .Red Hat Virtualization only
 
-*Missing Networks.* [[Infrastructure_mapping_missing_networks]]If the infrastructure mapping displays a *Networks missing* error message, delete the mapping,  link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#authenticating_rhv_hosts[authenticate the RHV conversion hosts], and create a new mapping.
+*Missing Networks.* [[Infrastructure_mapping_missing_networks]]If the infrastructure mapping displays a *Networks missing* error message, delete the mapping,  link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#authenticating_rhv_hosts[authenticate the RHV conversion hosts], and create a new mapping.
 
 .OpenStack Platform only
 
@@ -22,17 +22,15 @@ If a migration plan does not discover source virtual machines that have been mig
 
 *Virtual machines cannot be imported.* If you cannot import the source virtual machines with a CSV file while creating a migration plan, check the xref:CSV_file[CSV file's format and fields]. Create a new migration plan using the updated CSV file.
 
-*`Denied State`.* [[Denied_state_error]]If a migration plan fails immediately and the migration plan displays a *Denied State* error message in *Migration Plans Complete*, check that you have xref:Creating_conversion_hosts[created the conversion hosts]. (Red Hat Virtualization only: after creating the conversion hosts, you must   link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#authenticating_rhv_hosts[authenticate them] in CloudForms). Cancel the migration plan and xref:Retrying_and_remigrating[retry it].
+*`Denied State`.* [[Denied_state_error]]If a migration plan fails immediately and the migration plan displays a *Denied State* error message in *Migration Plans Complete*, check that you have xref:Creating_conversion_hosts[created the conversion hosts]. (Red Hat Virtualization only: after creating the conversion hosts, you must   link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#authenticating_rhv_hosts[authenticate them] in CloudForms). Cancel the migration plan and xref:Retrying_and_remigrating[retry it].
 
 == Virtual machine migration failure[[Virtual_machine_migration_failure]]
 
 If a virtual machine fails to migrate, check its xref:Logs[conversion log] and review the possible causes below.
 
-.Possible causes of virtual machine migration failure
-
 The following scenarios can cause a failed migration:
 
-*Mounted disks.* A virtual machine with mounted disk(s) cannot be migrated.
+*Mounted ISO/CDROM disks.* A virtual machine with mounted disk(s) cannot be migrated.
 
 .Red Hat Virtualization only
 
