--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_rhv_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_rhv_target_environment.adoc
@@ -7,9 +7,9 @@ To prepare the Red Hat Virtualization environment for migration:
 
 . Set the BIOS settings of the physical hosts for optimal performance (rather than power-saving), according to the vendor's recommendations, and disable the C1E halt state, if applicable.
 
-. Install  link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/installation_guide/#part-Installing_the_Red_Hat_Virtualization_Manager[Red Hat Virtualization Manager] 4.2.7 or later.
+. Install  link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/installation_guide/#part-Installing_the_Red_Hat_Virtualization_Manager[Red Hat Virtualization Manager] 4.2.8 or later.
 
-. Install   link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/installation_guide/#Installing_RHVH[Red Hat Virtualization Hosts] 4.2.7 or later or  link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/installation_guide/#Red_Hat_Enterprise_Linux_Hosts[Red Hat Enterprise Linux hosts] 7.6 or later.
+. Install   link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/installation_guide/#Installing_RHVH[Red Hat Virtualization Hosts] 4.2.8 or later or  link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/installation_guide/#Red_Hat_Enterprise_Linux_Hosts[Red Hat Enterprise Linux hosts] 7.6 or later.
 
 . Enable the following https://access.redhat.com/articles/417343[ports] in the conversion hosts' network:
 * 22 - SSH
@@ -26,10 +26,10 @@ IMS only supports shared storage such as NFS, iSCSI, or FCP. Local storage is no
 
 . Upload the link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#Uploading_the_VirtIO_and_Guest_Tool_Image_Files_to_an_ISO_Storage_Domain[VirtIO and Guest Tool images] to the ISO storage domain. The VirtIO image file name must include the version number: `virtio-win-_version_.iso`. The Guest Tool image is used to migrate Windows virtual machines.
 
-. Install link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html/installing_red_hat_cloudforms_on_red_hat_virtualization/[Red Hat CloudForms] 4.6 or later.
+. Install link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html/installing_red_hat_cloudforms_on_red_hat_virtualization/[Red Hat CloudForms] 4.7 or later.
 
-. Add the link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#vmware_vcenter_providers[VMware] and link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#red_hat_virtualization_providers[Red Hat Virtualization] environments to CloudForms.
+. Add the link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#vmware_vcenter_providers[VMware] and link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#red_hat_virtualization_providers[Red Hat Virtualization] environments to CloudForms.
 
-. Create and configure the xref:Conversion_hosts[conversion hosts] on physical machines, not nested virtual machines.
+. Configure the xref:Conversion_hosts[conversion hosts] on physical machines, not nested virtual machines.
 
-. Authenticate the  link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#authenticating_rhv_hosts[conversion hosts].
+. Authenticate the  link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#authenticating_rhv_hosts[conversion hosts].
