--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
@@ -5,7 +5,7 @@ You can configure your conversion hosts for VDDK or SSH transformation. Configur
 
 . VDDK only: xref:VDDK_only_Downloading_and_copying_VDDK[Downloading and copying the VDDK package]
 . VDDK and SSH: xref:VDDK_and_SSH_Configuring_the_conversion_hosts[Configuring the conversion hosts]
-. VDDK and SSH: xref:VDDK_and_SSH_Validating_the_transformation_configuration[Validating the transformation configuration]
+. VDDK and SSH: xref:VDDK_and_SSH_Validating_the_transformation_configuration[Validating the configuration]
 . SSH only: xref:SSH_only_Configuring_and_validating_the_SSH_connection[Configuring and validating the SSH connection]
 
 [id='VDDK_only_Downloading_and_copying_VDDK']
@@ -117,11 +117,10 @@ v2v_ssh_private_key: |
 # ansible-playbook -i `hostname`, -c local -b \
     -e @extra_vars.yml -e @secure_vars.yml --ask-vault-pass \
     /usr/share/ovirt-ansible-v2v-conversion-host/playbooks/conversion_host_enable.yml
-
 ----
 
 [id="VDDK_and_SSH_Validating_the_transformation_configuration"]
-== VDDK and SSH: Validating the transformation configuration
+== VDDK and SSH: Validating the configuration
 
 . Run the `conversion_host_check` playbook to verify that the conversion hosts are configured correctly:
 
