--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Rhel_premigration_playbook.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Rhel_premigration_playbook.adoc
@@ -12,7 +12,7 @@ This example registers a virtual machine with a Satellite 6 server and enables t
 
 [NOTE]
 ====
-The Satellite `username` and `password` should be encrypted with Ansible vault in a separate file.
+Encrypt the Satellite `username` and `password` with Ansible vault in a separate file.
 ====
 
 .RHEL pre-migration playbook
@@ -23,7 +23,7 @@ The Satellite `username` and `password` should be encrypted with Ansible vault i
 - hosts: _all_
   vars:
     rhsm_config:
-      server_hostname: "_satellite.example.com_"
+      server_hostname: "_Satellite_FQDN_"
       server_username: "_admin_"
       server_password: "_password_"
       org_id: "_organization_"
