--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -3,13 +3,13 @@
 
 The infrastructure migration involves the following key tasks:
 
-. xref:Pre_migration_tasks[Pre-migration tasks]:
+. xref:Pre_migration_tasks[Prerequisites]:
 
-* If you are migrating a large number of virtual machines or remigrating virtual machines, you must create a xref:CSV_file[CSV file] to import the virtual machines into the migration plan.
+* If you are migrating a large number of virtual machines or remigrating virtual machines, create a xref:CSV_file[CSV file] to import the virtual machines into the migration plan.
 
-* If you are using Ansible to automate pre- and post-migration tasks, you must set up the xref:Setting_up_an_ansible_environment[Ansible environment].
+* If you are using Ansible to automate pre- and post-migration tasks, set up the xref:Setting_up_an_ansible_environment[Ansible environment].
 
-* If you are migrating RHEL virtual machines, you must set up the xref:Setting_up_an_ansible_environment[Ansible environment] and configure the xref:Rhel_premigration_playbook[RHEL pre-migration playbook].
+* If you are migrating RHEL virtual machines, set up the xref:Setting_up_an_ansible_environment[Ansible environment] and configure the xref:Rhel_premigration_playbook[RHEL pre-migration playbook].
 
 . xref:Creating_migration_plan[Creating the migration plan]
 
