Formatted migration plan into table

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Canceling_a_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Canceling_a_migration_plan.adoc
@@ -1,6 +1,6 @@
 // assembly_Migration.adoc
 [id="Canceling_a_migration_plan"]
-= Canceling a migration plan
+= Canceling a migration plan in progress
 
 You can cancel a migration plan that has started:
 
