--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
@@ -14,14 +14,14 @@ image:Infrastructure_mappings_screen.png[]
 
 . Click menu:Compute[Migration > Infrastructure Mapping].
 . Click *Create Infrastructure Mapping*.
-. Fill in the fields of the infrastructure mapping wizard:
+. Perform the procedure for each infrastructure mapping screen:
 
 [cols="1,3", options="header"]
 |===
 ^|Screen ^|Procedure
 
 |*General*
-<a|. Enter an infrastructure mapping name and (optional) description.
+.<a|. Enter the infrastructure mapping name and (optional) description.
 . Select the target provider from the drop-down list.
 . Click *Next*.
 
@@ -45,15 +45,16 @@ image:Infrastructure_mappings_screen.png[]
 . Select one or more source networks and a target network.
 . Click *Add Mapping*. You can map the networks of additional source clusters.
 . Click *Create*.
-|===
 
-If you see a successful mapping message, click *Close*. Your infrastructure mapping appears in menu:Compute[Migration > Infrastructure Mappings].
+|*Results*
+.<a|Click *Close*. Your infrastructure mapping is saved in menu:Compute[Migration > Infrastructure Mappings].
 
 If error messages appear, see xref:Infrastructure_mapping_errors[Infrastructure mapping errors].
+|===
 
 [IMPORTANT]
 ====
-If you add or remove providers or provider objects from an infrastructure mapping, the mapping will display xref:Infrastructure_mapping_missing_resources[missing resource errors]. You must re-create the infrastructure mapping.
+If you add or remove providers or provider objects from an infrastructure mapping, the mapping will have xref:Infrastructure_mapping_missing_resources[missing resource errors]. You must re-create the infrastructure mapping.
 ====
 
-After you have created a successful infrastructure mapping, you are ready to create and run a  xref:Creating_and_running_a_migration_plan[migration plan].
+After you have created a successful infrastructure mapping, you can create a  xref:Creating_and_running_a_migration_plan[migration plan].
