--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -3,7 +3,7 @@
 
 The infrastructure migration involves the following key tasks:
 
-. xref:Pre_migration_tasks[Prerequisites]:
+. xref:Pre_migration_tasks[Pre_migration_tasks]:
 
 * If you are migrating a large number of virtual machines or remigrating virtual machines, create a xref:CSV_file[CSV file] to import the virtual machines into the migration plan.
 
@@ -28,72 +28,103 @@ image:Migration_overview_screen.png[]
 
 . Click *Create Migration Plan*.
 
-. In the *General* screen, select the infrastructure mapping from the drop-down list. If you select an OpenStack Platform infrastructure mapping, the *Migration Plan Wizard* displays an additional screen, *Instance Properties*, after the *VM* screen.
+. Perform the procedure for each migration plan screen:
 
-. Enter the name of your migration plan and a description (optional).
+[cols="1,3", options="header"]
+|===
+|Screen
+|Procedure
 
-. Discover the source virtual machines:
-
-* If you are migrating a small number of virtual machines, select *Choose from a list of VMs discovered in the selected infrastructure mapping* and click *Next*.
+|*General*
+.<a|. Select the infrastructure mapping from the drop-down list.
 +
-.Discovered virtual machines
-image:Discover_VMs.png[]
+If you select an OpenStack Platform mapping, an *Instance Properties* screen appears after the *VMs* screen.
 
-* If you are importing a CSV file:
+. Enter the migration plan name and (optional) description.
+. Select a virtual machine discovery method:
 
-.. (Optional) You can validate your infrastructure mapping. Select *Choose from a list of VMs discovered in the selected infrastructure mapping* and click *Next*. If your virtual machines appear in the list, the infrastructure mapping is correct. Click *Back*.
-.. Select *Import a CSV file with a list of VMs to be migrated* and click *Next*.
-.. Click *Import*, browse to the CSV file, and click *Open*.
+* *Choose from a list of VMs discovered in the selected infrastructure mapping*
+* *Import a CSV file with a list of VMs to be migrated*
+. Click *Next*.
 
-* If you cannot import or discover the source virtual machines, see xref:Migration_plan_errors[Migration plan errors].
-
-. In the *VM* screen, select the virtual machines to migrate and click *Next*.
-
-. OpenStack Platform only: In the *Instance Properties* screen, click the pencil icon to edit the network or flavor of each selected virtual machine.
+|*VMs*
+.<a|. If you selected *Choose from a list of VMs discovered in the selected infrastructure mapping*, select the virtual machines to be migrated.
 +
-[NOTE]
-====
+If you selected *Import a CSV file with a list of VMs to be migrated*:
+
+.. Click *Import*.
+.. Browse to the CSV file and click *Open*.
+
+. Click *Next*.
+
+If you cannot discover or import the source virtual machines, see xref:Migration_plan_errors[Migration plan errors].
+
+.<a|*Instance Properties*
+
+(OpenStack Platform only)
+.<a|. Click the pencil icon to edit the network or flavor of each selected virtual machine.
++
 If a flavor is too small for the source virtual machine, it is marked with an asterisk (`*`).
-====
-+
-When you have finished editing the virtual machines, click *Next*.
+. Click *Next*.
 
-. [[Automating_pre_and_post_migration_tasks_with_ansible]]In the *Advanced Options* screen, you can select pre- and post-migration playbook services, which you have already created, and the virtual machines on which they should run. See xref:Setting_up_an_ansible_environment[Setting up an Ansible environment for automated tasks].
-+
+.<a|*Advanced Options*
 [[Advanced_options_screen]]
-.Advanced options
-image:Advanced_Options.png[]
-+
-Click *Next*.
+(Optional)
+.<a|. Select a pre-migration playbook service.
+. Select a post-migration playbook service.
+. Select the virtual machines on which to run the playbook services.
+. Click *Next*.
 
-. In the *Schedule* screen, select *Save migration plan to run later* or *Start Migration Immediately* and click *Create*. The status of the migration plan is displayed in the *Results* screen:
-+
-* If you select *Save migration plan to run later*, the migration plan is saved in *Migration Plans Not Started*.[[Running_migration_plan]]
-+
-To schedule the migration plan, click the *Schedule* button, select a date and time, and click *Schedule*. The plan's status is *Migration Scheduled* with the date and time.
-+
+|*Schedule*
+.<a|. Select a schedule option:
+
+* *Save migration plan to run later*
+* *Start migration immediately*
+
+. Click *Create*.
+
+|*Results*
+.<a|Click *Close*.
+|===
+
+[[Running_migration_plan]]
+== Running a migration plan
+
+You can run the migration plan immediately or in the future, depending on the schedule option that you selected.
+
+=== Running a migration plan immediately
+
+The migration plan may take some time to complete. Progress bars indicate the amount of transferred data, the number of migrated virtual machines, and the elapsed time.
+
+To view the migration progress of individual virtual machines:
+
+. Click *Migration Plans in Progress*.
+. Click the migration plan name to display the migration plan details.
+
 [NOTE]
 ====
-To run a scheduled plan immediately, click *Migrate*.
-
-To edit or delete a schedule or plan, click the *More Actions* icon.
+The counter that shows the migration plan progress in menu:Compute[Migration > Migration Plans] may be a few seconds ahead of the counter that appears in the migration plan details. This is because the migration plans counter displays the total time for running a migration plan, while the migration plan details counter displays the time for migrating the virtual machines.
 ====
 
-* If you select *Start Migration Immediately*, the migration plan runs immediately.
-+
-The migration plan may take some time to complete. The migration plan displays progress bars showing the amount of data being transferred, the number of virtual machines being migrated, and the elapsed time.
-+
-To view the migration progress of individual virtual machines, click *Migration Plans in Progress* and click the migration plan name to display the migration plan details.
-+
-[NOTE]
-====
-The counter displaying the migration plan progress in menu:Compute[Migration > Migration Plans] may be a few seconds ahead of the counter that appears in the migration plan details. This is because the migration plans counter displays the total time for running a migration plan, while the migration plan details counter displays the time for migrating the virtual machines.
-====
+=== Running a migration plan in the future
 
-. When the migration plan has finished, click *Migration Plans Complete* to view the status of the migration plan. The completed migration plan shows successfully migrated virtual machines.
-+
+The migration plan is saved in *Migration Plans Not Started* and will not run until you schedule or run it.
+
+* To schedule a migration plan:
+
+. Click the *Schedule* button.
+. In the *Schedule Migration Plan* window, select a date and time and click *Schedule*. The plan's status is *Migration Scheduled* with the date and time.
+
+* To run a scheduled plan immediately, click *Migrate*.
+
+* To edit or delete a migration plan, click the *More Actions* icon.
+
+== Validating a migration plan
+
+When the migration plan has finished, click *Migration Plans Complete* to view the status of the migration plan. The completed migration plan shows successfully migrated virtual machines.
+
 A `Denied State` error indicates a problem with the conversion hosts (see xref:Denied_state_error[Denied state error] for more information).
-+
+
 If a virtual machine fails to migrate, see xref:Virtual_machine_migration_failure[Virtual machine migration failure].
 
 include::proc_Canceling_a_migration_plan.adoc[leveloffset=+1]
