--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Rhel_premigration_playbook.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Rhel_premigration_playbook.adoc
@@ -1,7 +1,7 @@
 [id="Rhel_premigration_playbook"]
 = Configuring the RHEL pre-migration playbook
 
-If you are migrating source virtual machines with Red Hat Enterprise Linux operating systems, you must xref:Setting_up_an_ansible_environment[set up an Ansible environment] and configure the `RHEL pre-migration` playbook to run as a xref:Automating_pre_and_post_migration_tasks_with_ansible[pre-migration task].
+If you are migrating source virtual machines with Red Hat Enterprise Linux operating systems, you must xref:Setting_up_an_ansible_environment[set up an Ansible environment] and configure the `RHEL pre-migration` playbook to run as a xref:Advanced_options_screen[pre-migration task].
 
 This playbook performs the following tasks on source RHEL virtual machines:
 
