--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
@@ -12,9 +12,9 @@ image:Infrastructure_mappings_screen.png[]
 
 .Procedure
 
-. Click menu:Compute[Migration > Infrastructure Mapping].
+. Click menu:Compute[Migration > Infrastructure Mappings].
 . Click *Create Infrastructure Mapping*.
-. Perform the procedure for each infrastructure mapping screen:
+. Perform the following procedures in each infrastructure mapping screen:
 
 [cols="1,3", options="header"]
 |===
