--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -28,7 +28,7 @@ image:Migration_overview_screen.png[]
 
 . Click *Create Migration Plan*.
 
-. Perform the procedure for each migration plan screen:
+. Perform the following procedures in each migration plan screen:
 
 [cols="1,3", options="header"]
 |===
