--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
@@ -11,7 +11,9 @@ To prepare the Red Hat OpenStack Platform environment for migration:
 
 . Create link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/networking_guide/#create_a_network[provider networks] for the target instances to ensure that the IP addresses of the source virtual machines are preserved.
 
-. Create a project for the conversion hosts and whatever projects you require for the target instances.
+. Create a project for the conversion hosts and whatever destination projects you require for the target instances.
+
+. Ensure that the `admin` user has `member` and `admin` roles in the conversion and destination projects.
 
 .   link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/storage_guide/#section-volumes-advanced-vol-type[Set at least one `volume type`] for the target block storage. Otherwise, CloudForms will not detect the storage during infrastructure mapping.
 
