--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
@@ -10,11 +10,11 @@ Prepare the VMware source environment for migration:
 The network configuration must not be changed in any way during the migration. IP addresses, VLANs, and other network configurations must be the same, before and after migration, because the conversion process preserves the source virtual machine MAC addresses.
 ====
 
-. Unmount ISO images from the source virtual machines. A virtual machine with an attached ISO image will cause the migration to fail.
+. Unmount ISO images from the source virtual machines.
 
-. Check that the source virtual machines do not have encrypted disks.
+. Eneusr that the source virtual machines do not have encrypted disks.
 
-. Check that each NIC on each virtual machine has no more than 1 IPv4 and/or 1 IPv6 address. Otherwise, the migration will fail.
+. Check that each NIC on each virtual machine has no more than 1 IPv4 and/or 1 IPv6 address.
 
 . If you are migrating to Red Hat Virtualization:
 
