--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Upgrading_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Upgrading_conversion_hosts.adoc
@@ -1,11 +1,12 @@
 [id="Upgrading_conversion_hosts"]
 = Upgrading conversion hosts
 
-* To upgrade Red Hat Virtualization conversion hosts that use VDDK transformation, enter the following command on the Manager machine:
+* To upgrade Red Hat Virtualization conversion hosts, enter the following commands on the Manager machine:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
-# ansible-playbook -e v2v_vddk_override=true -i conversion_hosts_inventory.yml conversion_host_enable.yml
+# yum update
+# cp /usr/share/ansible/roles/oVirt.v2v-conversion-host/files/virt-v2v-wrapper.py /usr/bin/
 ----
 
 * To upgrade OpenStack Platform conversion hosts, download the latest conversion appliance and create new conversion hosts.
