Started documenting variables

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
@@ -26,7 +26,7 @@ image:Infrastructure_mappings_screen.png[]
 . Click *Next*.
 
 |*Map Compute*
-.<a|. Select a source cluster and a target cluster.
+.<a|. Select a source cluster and a target cluster (RHV) or project (OpenStack Platform).
 +
 *Red Hat Virtualization only:* A target cluster that does not contain a conversion host displays a warning icon (&#65279;image:warning.png[height=15px]&#65279;). The icon appears after a few seconds' delay for polling the clusters and refreshing the UI.
 . Click *Add Mapping*. You can map additional clusters.
