--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
@@ -12,7 +12,7 @@ The network configuration must not be changed in any way during the migration. I
 
 . Unmount ISO images from the source virtual machines.
 
-. Eneusr that the source virtual machines do not have encrypted disks.
+. Ensure that the source virtual machines do not have encrypted disks.
 
 . Check that each NIC on each virtual machine has no more than 1 IPv4 and/or 1 IPv6 address.
 
