--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
@@ -34,9 +34,12 @@ You are ready to configure the conversion hosts.
 ----
 ---
 v2v_host_type: rhv
+# Transport methods to configure on the conversion host. Valid values: 'vddk', 'ssh' (on separate lines)
 v2v_transport_methods:
   - vddk
+# Maximum number of concurrent conversions per host. Default is '10'.
 v2v_max_concurrent_conversions: _10_
+# File name of ``.tar.gz package with VDDK library, located in /tmp.
 v2v_vddk_package_name: "VMware-vix-disklib-_version_.x86_64.tar.gz"
 v2v_vddk_package_url: "http://_path/to/downloaded_vddk_package_/{{ v2v_vddk_package_name }}"
 manageiq_provider_name: RHV
@@ -54,6 +57,11 @@ manageiq_providers:
             MIIDoDCCAoigAwIBAgIBATANBgkqhkiG9w0BAQsFADA9MRswGQYDVQ....
             -----END CERTIFICATE-----
 ----
++
+[NOTE]
+====
+The RHV certificate (`certificate_authority`) is `/etc/pki/ovirt-engine/apache-ca.pem` on the Manager machine.
+====
 
 * OpenStack Platform conversion host using SSH:
 +
@@ -65,7 +73,7 @@ v2v_transport_methods:
   - ssh
 v2v_max_concurrent_conversions: _10_
 manageiq_provider_name: OpenStack
-manageiq_url: "https://CloudForms_FQDN"
+manageiq_url: "https://_CloudForms_FQDN_"
 manageiq_validate_certs: false
 manageiq_zone_id: "42000000000001"
 manageiq_providers:
@@ -83,7 +91,15 @@ manageiq_providers:
             -----END TRUSTED CERTIFICATE-----
 ----
 +
-The certificates in this example are the chain formed by the undercloud CA and overcloud CA and are used by the OpenStack API. If you deploy your own link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/director_installation_and_usage/#appe-SSLTLS_Certificate_Configuration[certificate authority], use the chain that signed the API certificates. 
+[NOTE]
+====
+The OpenStack Platform certificate chain (`certificate_authority`) concatenates two CA files:
+
+* `/etc/pki/ca-trust/source/anchors/undercloud-cacert.pem` on the undercloud server
+* `/etc/pki/ca-trust/anchors/overcloud-cacert.pem` on one of the overcloud controllers
+
+If you deploy your own link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/director_installation_and_usage/#appe-SSLTLS_Certificate_Configuration[certificate authority], use the chain that signs the OpenStack Platform API certificates.
+====
 
 . Create an encrypted `secure_vars.yml` file for your passwords and keys:
 +
@@ -97,12 +113,11 @@ The certificates in this example are the chain formed by the undercloud CA and o
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 ---
-# You can add other sensitive information to this file
-#
-# CloudForms admin user:
+# Use this file for sensitive information
+# CloudForms `admin` user, for connecting to CloudForms
 manageiq_username: "_username_"
 
-# CloudForms password:
+# CloudForms `admin` password:
 manageiq_password: "_password_"
 
 # SSH private key
