--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
@@ -39,8 +39,9 @@ v2v_transport_methods:
   - vddk
 # Maximum number of concurrent conversions per host. Default is '10'.
 v2v_max_concurrent_conversions: _10_
-# File name of ``.tar.gz package with VDDK library, located in /tmp.
+# File name of .tar.gz package with VDDK library, located in /tmp.
 v2v_vddk_package_name: "VMware-vix-disklib-_version_.x86_64.tar.gz"
+# URL of VDDK package,
 v2v_vddk_package_url: "http://_path/to/downloaded_vddk_package_/{{ v2v_vddk_package_name }}"
 manageiq_provider_name: RHV
 manageiq_url: "https://_CloudForms_FQDN_"
