updates, compatibility matrix

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
@@ -8,3 +8,4 @@ If the cause of the failed migration is not clear, see xref:Logs[] and xref:Comm
 include::modules/proc_Retrying_and_remigrating.adoc[leveloffset=+1]
 include::modules/ref_Logs.adoc[leveloffset=+1]
 include::modules/ref_Common_issues_and_mistakes.adoc[leveloffset=+1]
+include::modules/ref_Known_issues.adoc[leveloffset=+1]
