--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
@@ -121,7 +121,7 @@ manageiq_username: "_username_"
 # CloudForms `admin` password:
 manageiq_password: "_password_"
 
-# SSH private key
+# SSH private key to connect to VMware hypervisors
 v2v_ssh_private_key: |
   -----BEGIN RSA PRIVATE KEY-----
   b3BlbnNzaC1rZXktdjEAAAAABG5vbmUAAAAEbm9uZQAAAAAAAAABAAAAlwAAAAdzc2gtcn....
@@ -158,7 +158,7 @@ If you are configuring the conversion hosts for SSH transformation, you must con
 
 . Copy the SSH keys to all VMware hypervisors to ensure that each conversion host has the SSH key of the ESXi host in its `known_hosts` file:
 +
-[options="nowrap" subs="+quotes,verbatim"]
+[options="nowrap" subs="verbatim"]
 ----
 # ssh root@_esx1.example.com_ sh -c \
     'cat >> /etc/ssh/keys-root/authorized_keys' < /var/lib/vdsm/.ssh/id_rsa.pub
