--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
@@ -26,7 +26,7 @@ image:Infrastructure_mappings_screen.png[]
 . Click *Next*.
 
 |*Map Compute*
-.<a|. Select a source cluster and a target cluster (RHV) or project (OpenStack Platform).
+.<a|. Select a source cluster and a target Red Hat Virtualization cluster or OpenStack Platform project.
 +
 *Red Hat Virtualization only:* A target cluster that does not contain a conversion host displays a warning icon (&#65279;image:warning.png[height=15px]&#65279;). The icon appears after a few seconds' delay for polling the clusters and refreshing the UI.
 . Click *Add Mapping*. You can map additional clusters.
@@ -34,7 +34,7 @@ image:Infrastructure_mappings_screen.png[]
 
 |*Map Storage*
 .<a|. Select a source cluster from the drop-down list.
-. Select a source datastore and a target datastore.
+. Select a source datastore and a target Red Hat Virtualization datastore or OpenStack Platform volume type.
 +
 *OpenStack Platform only:* If the target datastore is missing, see xref:OpenStack_storage_not_detected[Storage not detected].)
 . Click *Add Mapping*. You can map additional datastores.
