--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Enabling_conversion_hosts_in_cloudforms.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Enabling_conversion_hosts_in_cloudforms.adoc
@@ -4,16 +4,10 @@
 OpenStack Platform conversion hosts do not require configuration in CloudForms.
 
 [[Enabling_rhv_conversion_hosts_in_cloudforms]]
-Red Hat Virtualization conversion hosts require tagging and validation:
+Authenticate the Red Hat Virtualization conversion hosts:
 
-. Click menu:Compute[Infrastructure > Hosts] and select a Red Hat Virtualization Host.
-. Click the `Policy` drop-down button and select `Edit Tags`.
-. Select `V2V - Transformation Host` from the `tag` drop-down list and `t` as the `assigned value`.
-. Select `V2V - Transformation Method` from the `tag` drop-down list and either `VDDK` or `SSH` as the `assigned value`.
-. Click `Save`.
-. Select the same host, click the `Configuration` drop-down button, and select `Edit this item`.
+. Click menu:Compute[Infrastructure > Hosts] and select a Red Hat Virtualization conversion host.
+. Click the `Configuration` drop-down button, and select `Edit Selected items`.
 . In the `Default` tab of the Endpoints section, enter the `Username` *root* and the password.
-. Click `Validate`. If a success message is displayed, click `Save`.
-
-.Red Hat Virtualization Conversion Host Properties
-image:Conversion_host_properties.png[]
+. Click `Validate`.
+. Click `Save`.
