--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_rhv_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_rhv_target_environment.adoc
@@ -1,13 +1,9 @@
 [id="Preparing_the_rhv_target_environment"]
 = Preparing the Red Hat Virtualization environment
+:context: RHV
+:RHV:
 
-[NOTE]
-====
-You must ensure that the installed software versions are compatible:
-
-* RHV 4.2.7 and CloudForms 4.6
-* RHV 4.2.8 and CloudForms 4.7
-====
+include::ref_Software_compatibility_matrix.adoc[]
 
 To prepare the Red Hat Virtualization environment for migration:
 
@@ -39,5 +35,3 @@ IMS only supports shared storage such as NFS, iSCSI, or FCP. Local storage is no
 . Add the link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#vmware_vcenter_providers[VMware] and link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#red_hat_virtualization_providers[Red Hat Virtualization] environments to CloudForms.
 
 . Configure the xref:Conversion_hosts[conversion hosts] on physical machines, not nested virtual machines.
-
-. Authenticate the  link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#authenticating_rhv_hosts[conversion hosts].
