--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Common_issues_and_mistakes.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Common_issues_and_mistakes.adoc
@@ -4,25 +4,25 @@
 == Infrastructure mapping errors[[Infrastructure_mapping_errors]]
 
 [[Infrastructure_mapping_missing_resources]]
-*Missing datastores or clusters.* If the infrastructure mapping displays a *Datastores missing* or *Clusters missing* error message, delete the mapping and create a new one. This error is caused by creating a mapping and subsequently adding or removing providers or provider objects, which changes their object IDs.
+* Missing datastores or clusters. If the infrastructure mapping displays a *Datastores missing* or *Clusters missing* error message, delete the mapping and create a new one. This error is caused by creating a mapping and subsequently adding or removing providers or provider objects, which changes their object IDs.
 
 .Red Hat Virtualization only
 
-*Missing Networks.* [[Infrastructure_mapping_missing_networks]]If the infrastructure mapping displays a *Networks missing* error message, delete the mapping,  link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#authenticating_rhv_hosts[authenticate the RHV conversion hosts], and create a new mapping.
+* Missing Networks. [[Infrastructure_mapping_missing_networks]]If the infrastructure mapping displays a *Networks missing* error message, delete the mapping, xref:Enabling_rhv_conversion_hosts_in_cloudforms[authenticate the RHV conversion hosts], and create a new mapping.
 
 .OpenStack Platform only
 
-*Storage not detected.* [[OpenStack_storage_not_detected]]If the target block storage does not appear while you are creating an infrastructure mapping, check that you have   link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/storage_guide/#section-volumes-advanced-vol-type[set at least one `volume type`] for the storage.
+* Storage not detected. [[OpenStack_storage_not_detected]]If the target block storage does not appear while you are creating an infrastructure mapping, check that you have   link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/storage_guide/#section-volumes-advanced-vol-type[set at least one `volume type`] for the storage.
 
 == Migration plan errors[[Migration_plan_errors]]
 
-*Virtual machines are not discovered.* If a migration plan does not discover the source virtual machines and if the virtual machines have never been migrated in the past, check that the datastores and networks of the source virtual machines have been added to the Infrastructure Mapping.
-
+* Virtual machines are not discovered. If a migration plan does not discover the source virtual machines and if the virtual machines have never been migrated in the past, check that the datastores and networks of the source virtual machines have been added to the Infrastructure Mapping.
++
 If a migration plan does not discover source virtual machines that have been migrated in the past, xref:Retrying_and_remigrating[remigrate] the virtual machines. Previously migrated virtual machines cannot be discovered because they are marked as `migrated` in the CloudForms VMDB.
 
-*Virtual machines cannot be imported.* If you cannot import the source virtual machines with a CSV file while creating a migration plan, check the xref:CSV_file[CSV file's format and fields]. Create a new migration plan using the updated CSV file.
+* Virtual machines cannot be imported. If you cannot import the source virtual machines with a CSV file while creating a migration plan, check the xref:CSV_file[CSV file's format and fields]. Create a new migration plan using the updated CSV file.
 
-*`Denied State`.* [[Denied_state_error]]If a migration plan fails immediately and the migration plan displays a *Denied State* error message in *Migration Plans Complete*, check that you have xref:Creating_conversion_hosts[created the conversion hosts]. (Red Hat Virtualization only: after creating the conversion hosts, you must   link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#authenticating_rhv_hosts[authenticate them] in CloudForms). Cancel the migration plan and xref:Retrying_and_remigrating[retry it].
+* `Denied State`. [[Denied_state_error]]If a migration plan fails immediately and the migration plan displays a *Denied State* error message in *Migration Plans Complete*, check that you have xref:Creating_conversion_hosts[created the conversion hosts]. (Red Hat Virtualization only: ensure that you have xref:Enabling_rhv_conversion_hosts_in_cloudforms[authenticated the conversion hosts]). Cancel the migration plan and xref:Retrying_and_remigrating[retry it].
 
 == Virtual machine migration failure[[Virtual_machine_migration_failure]]
 
@@ -30,16 +30,18 @@ If a virtual machine fails to migrate, check its xref:Logs[conversion log] and r
 
 The following scenarios can cause a failed migration:
 
-*Mounted ISO/CDROM disks.* A virtual machine with mounted disk(s) cannot be migrated.
+* Mounted ISO/CDROM disk(s)
+
+* Encrypted disk(s)
+
+* Invalid name. The source virtual machine name must not contain spaces or special characters.
 
 .Red Hat Virtualization only
 
-*Invalid name.* Check that the virtual machine name does not contain spaces or special characters, which are not supported in the target environment
+* Virtual machine name duplicates an existing target virtual machine name.
 
-*Name conflict.* Check that the virtual machine name is not the same as an existing target virtual machine name.
-
-*SSH transformation failure.* [[SSH_transformation_fails]]If you are using SSSD with single sign-on, SSH fails for the `vdsm` account. Reinstall `ipa-client` without configuring the OpenSSH client:
-
+* SSH transformation failure. [[SSH_transformation_fails]]If you are using SSSD with single sign-on, SSH fails for the `vdsm` account. Reinstall `ipa-client` without configuring the OpenSSH client:
++
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 # ipa-client-install --uninstall
@@ -53,13 +55,13 @@ You cannot resolve this issue by changing the configuration file because the fil
 
 .OpenStack Platform only
 
-*Virtual machine powered off.* The virtual machine must be powered on at the time of migration.
+* Virtual machine powered off. The virtual machine must be powered on at the time of migration.
 
-*No IP address:*
+* No IP address:
 
-* Check that the virtual machine has VMware Tools installed. VMware Tools preserves the IP address for migration.
+** VMware Tools not installed on source virtual machine. VMware Tools preserves the IP address for migration.
 
-* Check that the virtual machine does not have an interface configuration file that is mapped to a non-existent interface (for example, `/etc/sysconfig/network-scripts/ifcfg-eth1` exists, but `eth1` interface does not).
+** Source virtual machine has an interface configuration file that is mapped to a non-existent interface (for example, `/etc/sysconfig/network-scripts/ifcfg-eth1` exists, but `eth1` interface does not).
 +
 [options="" subs="+quotes,verbatim"]
 ----
@@ -68,8 +70,8 @@ _date_ _time_:ERROR: Command output:
 BadRequestException: Unknown error
 ----
 
-*Not Authorized.* Check that the OpenStack Platform provider user configured in CloudForms has `admin` role privileges within the target project.
-
+* Not Authorized. OpenStack Platform provider user configured in CloudForms does not have `admin` role privileges within the target project.
++
 [options="" subs="+quotes,verbatim"]
 ----
 RESP BODY: {"NeutronError": {"message": "((rule:create_port and rule:create_port:fixed_ips) and rule:create_port:mac_address) is disallowed by policy", "type": "*PolicyNotAuthorized*", "detail": ""}}
